feat: use and store sha-256 encrypted passwords